# AIO4C

./: CMakeLists.txt  README.md  Test Results - All_in_aio_class_particle_test_cpp.html
aioPrograms/: bracketSupplier.aio  game.aio  math.aio  primitive.aio  starter.aio  test.aio  utils.aio
aioPrograms/demo/loop/: DemoLoop1.aio
aioPrograms/demo/switch/: DemoSwitch.aio
aioPrograms/examples/: DemoIf.aio
aioPrograms/examples/loop/: DemoLoop2.aio
aioPrograms/examples/switch/: DemoSwitch.aio
aioPrograms/tests/controlGraphTests/: Trivial.aio
aioPrograms/tests/spiderTests/: Loop.aio
aio_programs/: DemoSwitch.aio  assign.aio  assignAndIf.aio  game.aio  loop.aio  procedure.aio  return.aio  starter.aio  switch.aio  test.aio  utils.aio
com/: CMakeLists.txt
com/headers/aio_core/: aio_core.h
com/sources/aio_core/: aio_core.cpp
demo/api/: AIOClass.aio  AIOCore.aio  AIOException.aio  AIOExecutable.aio  AIOFunction.aio  AIOModule.aio  AIONative.aio
demo/lang/: AIOClass.aio  AIOConfigurable.aio  AIOCore.aio  AIOExecutable.aio  AIOFunction.aio  AIOModule.aio  AIONative.aio  AIOObservable.aio  list.aio
demo/project1/: build.aio  build.aio_core
demo/project1/cyborgs/: Cyborg.aio
demo/project1/main/: main.aio
demo/project1/persons/: Person.aio
demo/project1/tests/: Test.aio  Tests.aio
demo/project2/: build.aio  build.aio_core
demo/project2/main/: main.aio
demo/project3/: build.aio_core
demo/project3/main/: main.aio
demo/project3/planets/: Planet.aio  SpaceType.aio
demo/project4/main/: main.aio
headers/aio_core/: aio_build_script.h  aio_config.h  aio_core.h
headers/aio_core/aio_context/: aio_context.h
headers/aio_lang/aio_annotatable/: aio_annotatable.h
headers/aio_lang/aio_annotation/: aio_annotation.h
headers/aio_lang/aio_class/: aio_class.h
headers/aio_lang/aio_field/: aio_field.h  aio_filed.h
headers/aio_lang/aio_file/: aio_file.h
headers/aio_lang/aio_function/: aio_function.h
headers/aio_lang/aio_inheritable/: aio_inheritable.h
headers/aio_lang/aio_invokable/: aio_invokable.h
headers/aio_lang/aio_lexer/: aio_lexer.h
headers/aio_lang/aio_lexer_utils/: aio_lexer_utils.h
headers/aio_lang/aio_modifiers/: aio_modifiers.h
headers/aio_lang/aio_namespaces/: aio_namespace_definition.h
headers/aio_lang/aio_schemable/: aio_schemable.h
headers/aio_lang/aio_source_file/: aio_source_file.h
headers/aio_lang/aio_space/: aio_space.h
headers/aio_lang/aio_type/: aio_type.h
headers/aio_lang/aio_types/: aio_type.h  aio_types.h
headers/aio_lang/aio_visibility/: aio_visibility.h
headers/aio_lang/aio_visibility_type/: aio_visibility_type.h
headers/aio_parsing/aio_context_inflater/: aio_context_inflater.h
headers/aio_parsing/aio_inflater/: aio_inflater.h
headers/aio_parsing/aio_invokable_circuit/: aio_invokable_circuit.h
headers/aio_runtime/: aio_build_runtime.h  aio_program_runtime.h  aio_runtime.h
headers/aio_runtime/aio_bundle/: aio_bundle.h
headers/aio_runtime/aio_instruction/: aio_instruction.h
headers/aio_runtime/aio_invokable_circuit/: aio_invokable_circuit.h
headers/aio_runtime/aio_invokable_instruction/: aio_invokable_instruction.h
headers/aio_runtime/aio_invokable_track/: aio_invokable_track.h
headers/aio_runtime/aio_invoker/: aio_invoker.h
headers/aio_runtime/aio_ray/: aio_ray.h
headers/aio_runtime/aio_scheme/: aio_scheme.h
headers/aio_runtime/aio_task/: aio_task.h
headers/aio_runtime/aio_value/: aio_value.h
headers/aio_runtime/aio_variable/: aio_variable.h
headers/aio_utils/aio_bundle/: aio_bundle.h
headers/aio_utils/aio_value/: aio_value.h  aio_value_list.h
headers/lang/aio_annotation/: aio_annotation.h
headers/lang/aio_class/: aio_class.h
headers/lang/aio_context/: aio_context.h
headers/lang/aio_core/: aio_core.h
headers/lang/aio_field/: aio_filed.h
headers/lang/aio_file/: aio_file.h
headers/lang/aio_function/: aio_function.h
headers/lib/: AIOMutableListOfString.h  AIOMutableObjectMap.h
headers/reservedNames/: AIOReservedNamesContainer.h
headers/reserved_names/: aio_reserved_names_container.h
libs/lib4aio/: CMakeLists.txt
main/: main.c  main.cpp
sources/aio_core/: aio_build_script.cpp  aio_config.cpp  aio_core.c  aio_core.cpp
sources/aio_runtime/: aio_build_runtime.cpp  aio_program_runtime.cpp  aio_runtime.cpp
sources/interpreter/: main.c
sources/lib/: AIOMutableListOfString.c  AIOMutableObjectMap.c
sources/main/: main.c
tests/: CMakeLists.txt
(+943 files in other folders)
